# hope-country-workspace2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  compose.yaml  mkdocs.yml  pyproject.toml  pytest.ini  ruff.toml  worker
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: lint.yml  release.yml  test.yml
docker/: Dockerfile
docker/conf/: uwsgi.ini
docs/src/: .pages  contributing.md  dev_helpers.md  index.md  interfaces.md
docs/src/flows/: import.md  model.md
docs/src/import_data/: .pages  aurora.md  index.md  kobo.md  xls.md
src/country_workspace/: __monitor__.py  admin_site.py  apps.py  cache.py  constants.py  state.py  tasks.py  types.pyi
src/country_workspace/admin/: __init__.py  base.py  batch.py  filters.py  household.py  individual.py  job.py  kobo.py  locations.py  office.py  program.py  registration.py  sync.py  user.py
src/country_workspace/cache/: apps.py  ddt.py  handlers.py  manager.py  middleware.py  signals.py  smart_panel.py
src/country_workspace/compat/: admin_extra_buttons.py
src/country_workspace/config/: __init__.py  celery.py  settings.py  urls.py
src/country_workspace/datasources/: rdi.py
src/country_workspace/middleware/: exception.py  state.py
src/country_workspace/migrations/: 0001_initial.py  0002_alter_program_active_and_more.py  0002_koboasset_kobosyncjob_kobosubmission.py  0003_koboasset_programs.py  0004_alter_program_programme_code.py  0004_koboasset_name.py  0005_alter_koboasset_uid.py  0005_remove_household_history_remove_individual_history_and_more.py  0006_alter_kobosubmission_data_koboquestion.py  0007_alter_koboquestion_unique_together.py
src/country_workspace/models/: __init__.py  base.py  batch.py  geo.py  household.py  individual.py  jobs.py  kobo.py  locations.py  office.py  program.py  rdi.py  registration.py  sync.py
src/country_workspace/remotes/: country.py
src/country_workspace/security/: backends.py  utils.py
src/country_workspace/social/: pipeline.py
tests/: .coveragerc  conftest.py  r_sync_command.yaml  r_sync_program2.yaml  r_sync_programs1.yaml  r_sync_refresh.yaml  sync_all.yaml  sync_lookups.yaml  sync_office.yaml  sync_programs.yaml  test_commands.py  test_lock.py  test_login.py  test_social_pipeline.py  test_state.py  test_sync.py  test_user_flow.py
tests/admin/: test_admin_constance.py  test_admin_individual.py  test_admin_job.py  test_admin_program.py  test_admin_smoke.py  test_admin_sync.py  test_admin_user.py
tests/cache/: test_cache_base.py  test_cache_handlers.py  test_cache_manager.py  test_cache_panel.py
tests/functional/: conftest.py  test_f_household.py  test_f_login.py
tests/models/: test_m_batch.py  test_m_history.py  test_m_household.py
tests/remotes/: test_r_country.py
tests/utils/: test_utils_flags.py  test_utils_http.py  tests_utils_fields.py
tests/versioning/: conftest.py  test_command.py  test_ver.py
tests/workspace/: test_cache.py  test_ws_backend.py  test_ws_batch.py  test_ws_household.py  test_ws_import.py  test_ws_individual.py  test_ws_program.py  test_ws_security.py  test_ws_site.py
(+327 files in other folders)
